# StkDekrispatorSynthesizer

./: README.md  build_run_linux.sh  xcode.command
CloudSeed/: Exports.cpp  MultitapDiffuser.h  ReverbChannel.h  ReverbController.h
btgui/Bullet3AppSupport/: BulletDemoInterface.h  CMakeLists.txt  CommonParameterInterface.h  CommonPhysicsSetup.h  GraphingTexture.h  GwenParameterInterface.cpp
btgui/Bullet3Common/: CMakeLists.txt
btgui/Gwen/: CMakeLists.txt
btgui/OpenGLWindow/: CommonRenderInterface.h  GLInstancingRenderer.cpp  GLInstancingRenderer.h  SimpleOpenGL3App.cpp
build3/: premake4.lua  premake4_rpi  rp_usbdisplay
build3/rpi/: App_Dekrispator.make  Makefile  stk.make
examples/Dekrispator/: CONSTANTS.h  adsr.c  audio.c  audio.h  blepvco.c  chorusFD.c  delay.c  drifter.c  main.cpp  midi_interface.c  oscillators.c  premake4.lua  random.c  random.h  resonantFilter.c  sequencer.c  sequencer.h  soundGen.c  timers.c  timers.h
examples/GwenOpenGLTest/: CMakeLists.txt  OpenGLSample.cpp  premake4.lua
examples/PolyWaveFlow/: MyInstrument.cpp  MyInstrument.h  VoiceWave.cpp  VoiceWave.h  main.cpp  premake4.lua
examples/SimpleDemoSelector/: BulletDemoEntries.h  CMakeLists.txt  CoordinateSystemDemo.h  RenderInstancingDemo.h  main.cpp  premake4.lua
examples/SimpleOpenGL3/: CMakeLists.txt  premake4.lua
examples/eguitar/: eguitar.cpp  premake4.lua  utilities.cpp  utilities.h
examples/ragamatic/: premake4.lua  ragamat.cpp
precompiled/: App_Dekrispator_rpi
stk/include/: Guitar.h  Stk.h
stk/projects/demo/: Makefile  demo
stk/projects/effects/: Makefile  effects
stk/projects/eguitar/: Makefile  eguitar
stk/projects/examples/: Makefile  audioprobe  bethree  bethree.cpp  controlbee  crtsine  duplex  foursine  foursine.aif  grains  inetIn  inetOut  midiprobe  play  playsmf  record  rtsine  sine  sineosc  threebees
stk/projects/ragamatic/: Makefile  ragamat
stk/src/: ADSR.cpp  Delay.cpp  InetWvIn.cpp  InetWvOut.cpp  Makefile  Messager.cpp  RtAudio.cpp  premake4.lua
